# docs/swagger.json
@@ -22,6 +22,15 @@
                     "carts"
                 ],
                 "summary": "Removes item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the item to retrieve",
+                        "name": "item_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -30,6 +39,12 @@
                             "additionalProperties": {
                                 "$ref": "#/definitions/model.CartItem"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Item doesn't exist",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -45,6 +60,22 @@
                     "carts"
                 ],
                 "summary": "Removes item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the customer to whose cart the item is added",
+                        "name": "customer_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID of an item that is being added",
+                        "name": "item_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -53,6 +84,12 @@
                             "additionalProperties": {
                                 "$ref": "#/definitions/model.CartItem"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Item doesn't exist",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -61,10 +98,60 @@
         "/carts/{customer_id}/orders": {
             "post": {
                 "description": "Removes item from catalog",
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "carts"
                 ],
                 "summary": "Removes item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the customer who is making the order",
+                        "name": "customer_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Order has been place",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "$ref": "#/definitions/model.CartItem"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Item doesn't exist",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/carts/{customer_id}/totals": {
+            "post": {
+                "description": "Removes item from catalog",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "carts"
+                ],
+                "summary": "Removes item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the customer for whom to retrieve total",
+                        "name": "customer_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -74,25 +161,11 @@
                                 "$ref": "#/definitions/model.CartItem"
                             }
                         }
-                    }
-                }
-            }
-        },
-        "/carts/{customer_id}/totals": {
-            "post": {
-                "description": "Removes item from catalog",
-                "tags": [
-                    "carts"
-                ],
-                "summary": "Removes item",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                    },
+                    "400": {
+                        "description": "Item doesn't exist",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "$ref": "#/definitions/model.CartItem"
-                            }
+                            "type": "string"
                         }
                     }
                 }
@@ -108,11 +181,26 @@
                     "items"
                 ],
                 "summary": "Show an item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the item to retrieve",
+                        "name": "item_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Item"
+                        }
+                    },
+                    "400": {
+                        "description": "Item doesn't exist",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -135,6 +223,12 @@
                         "schema": {
                             "$ref": "#/definitions/model.Item"
                         }
+                    },
+                    "400": {
+                        "description": "Item already exist",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -147,11 +241,26 @@
                     "items"
                 ],
                 "summary": "Removes item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the item to delete",
+                        "name": "item_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Item"
+                        }
+                    },
+                    "400": {
+                        "description": "Item doesn't exist",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
